# mindstream

./: .env.example  .gitignore  LOG.md  MINDSTREAM.md  pyproject.toml
.claude/: MEMORY.md  project-approach.md  user-context.md
app/: config.py  main.py
app/api/: router.py
app/api/v1/: chat.py  documents.py  health.py
app/services/: chunk_service.py  document_parser.py  embedding_service.py  llm_service.py  vector_store.py
